# lexis_mollis

./: .gitignore  .zenodo.json  BUILD_PLAYBOOK.md  CITATION.cff  CODEX_NEXT_STEPS_SIMILARITY_GRAPH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  PROJECT_STATUS.md  README.md  README_pdfkb.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  run_pdfkb_full.sh  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: cases.json  gazetteer_candidates_llm_review.csv  similarity_cases.json
epics/: EPIC_A_infrastructure_gouvernance.md  EPIC_B_modele_donnees_standards.md  EPIC_C_similarite.md  EPIC_D_knowledge_graph.md  EPIC_E_export_publication.md  EPIC_F_plateforme_web.md  EPIC_G_cicd.md  EPIC_H_expansion_corpus.md  EPIC_I_revision_communaute.md
legacy/: README.md
metadata/: parsed_metadata.json
metadata_design/: README.md  SIMILARITY_DESIGN.md  chunk.schema.json  data_dictionary.md  doc_type_mapping.json  document.schema.json  edge.schema.json  node.schema.json  ocr_protocol.md  ontology.ttl  page.schema.json  paper_methods_schema.md  paperless_fields.csv  review_event.schema.json  scientific_methods_full.md  scientific_methods_full.tex  tag_taxonomy.json
pdfkb/: __init__.py  benchmark.py  cleaning.py  cli.py  export.py  ids.py  inventory.py  models.py  ocr.py  pipeline.py  quality.py  state.py  vision.py
platform/: README.md
scripts/: build_release_tables.py  calibrate_similarity.py  check_governance.py  export_hf_dataset.py  export_internet_archive.py  make_zenodo_metadata.py  rag_ask.py  validate_schemas.py  (+2 more)
(+3224 files in other folders)
